WIP: taint-mode: Specify sources/sanitizers/sink using pattern formulas
This breaks compatibility with the previous taint-mode, it is no longer
possible to write:

    sources:
    - $REQ.query

Now you have to write:

    sources:
    - pattern: $REQ.query

Helps #3199

test plan:
make test # tests included

--- a/semgrep-core/tests/tainting_rules/php/echo.yaml
+++ b/semgrep-core/tests/tainting_rules/php/echo.yaml
@@ -5,9 +5,9 @@ rules:
       - php
     message: Working!
     pattern-sources:
-      - $_GET[...]
+      - pattern: $_GET[...]
     pattern-sanitizers:
-      - htmlspecialchars(...)
+      - pattern: htmlspecialchars(...)
     pattern-sinks:
-      - echo ...;
+      - pattern: echo ...;
     severity: ERROR
