WIP: rule_schema: Fix metavariable-pattern

--- a/semgrep-core/tests/OTHER/rules/metavar_pattern_lang.yaml
+++ b/semgrep-core/tests/OTHER/rules/metavar_pattern_lang.yaml
@@ -9,7 +9,6 @@ rules:
       - metavariable-pattern:
           metavariable: $CODE
           language: C
-          patterns:
-              - pattern: |
-                  $X++;
+          pattern: |
+            $X++;
     severity: WARNING
