--- a/semgrep-core/tests/OTHER/rules/metavar_pattern_lang2.yaml
+++ b/semgrep-core/tests/OTHER/rules/metavar_pattern_lang2.yaml
@@ -9,7 +9,6 @@ rules:
       - metavariable-pattern:
           metavariable: $...JS
           language: javascript
-          patterns:
-              - pattern: |
-                  console.log(...)
+          pattern: |
+            console.log(...)
     severity: WARNING
