--- a/semgrep-core/tests/OTHER/rules/metavar_pattern_regex.yaml
+++ b/semgrep-core/tests/OTHER/rules/metavar_pattern_regex.yaml
@@ -8,6 +8,5 @@ rules:
       - metavariable-pattern:
           metavariable: $1
           language: generic
-          patterns:
-            - pattern: google-cloud-storage
+          pattern: google-cloud-storage
     severity: INFO
