--- a/semgrep/tests/e2e/rules/taint.yaml
+++ b/semgrep/tests/e2e/rules/taint.yaml
@@ -2,15 +2,15 @@ rules:
   - id: classic
     mode: taint
     pattern-sources:
-      - source(...)
-      - source1(...)
+      - pattern: source(...)
+      - pattern: source1(...)
     pattern-sinks:
-      - sink(...)
-      - sink1(...)
-      - eval(...)
+      - pattern: sink(...)
+      - pattern: sink1(...)
+      - pattern: eval(...)
     pattern-sanitizers:
-      - sanitize(...)
-      - sanitize1(...)
+      - pattern: sanitize(...)
+      - pattern: sanitize1(...)
     message: A user input source() went into a dangerous sink()
     languages: [python, javascript]
     severity: WARNING
